# Kalorik

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 0002_add_language_code.sql  001_init.sql  003_create_food_logs.sql  004_add_subscription_ends_at_to_users.sql  005_create_payments.sql
src/: main.rs  webhook.rs
src/db/: mod.rs  models.rs  queries.rs
src/locales/: messages.rs
src/services/: chart.rs  mod.rs  nutrition.rs
src/telegram/: handlers.rs  mod.rs
