[package]
name = "Kalorik"
version = "0.2.0"
edition = "2024"

[dependencies]
once_cell = "1.21.3"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "macros", "migrate", "chrono"] }
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
dotenvy = "0.15.7"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
teloxide = { version = "0.15.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }

[profile.release]
strip = true
opt-level = "z"
